<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Lexica</string>
    <string name="new_game">New Game</string>
    <string name="restore_game">Restore Game</string>
    <string name="prefs">Preferences</string>
    <string name="pref_dict">Lexicon</string>
    <string name="pref_dict_ca" tools:keep="@string/pref_dict_ca">Catalan</string>
    <string name="pref_dict_de_DE" tools:keep="@string/pref_dict_de_DE">German (Extended)</string>
    <string name="pref_dict_de_DE_description" tools:keep="@string/pref_dict_de_DE_description">Includes diacritics: äöü</string>
    <string name="pref_dict_de_DE_no_diacritics" tools:keep="@string/pref_dict_de_DE_no_diacritics">German</string>
...
    <string name="pref_scoreType">Scoring Type</string>
    <string name="word_length">Word Length</string>
    <string name="letter_points">Letter Points</string>
    <string name="pref_hintMode">Hint</string>
    <string name="pref_hintMode_summary">Shows the number of words each letter can be used in</string>
    <string name="tile_count">Number of words</string>
    <string name="hint_colour">Tile colour</string>
    <string name="pref_sounds">Sounds Enabled</string>
    <string name="pref_sounds_summary">Whether or not sound effects are enabled</string>
    <string name="dialog_about_title">About Lexica</string>
    <string name="dialog_about_content">
	Touch the screen and move your finger to adjacent squares to spell words.
	You have three minutes to find as many words as possible.
...
    <string name="button_cancel">Cancel</string>
    <string name="about">About</string>
    <string name="show_missed">Show Missed Words</string>
    <string name="hide_missed">Hide Missed Words</string>
    <string name="show_unique">Show Unique Words</string>
    <string name="hide_unique">Hide Unique Words</string>
    <string name="view_word"><u>View</u></string>
    <string name="define_word"><u>Define</u> </string>
    <string name="words">Words</string>
    <string name="score">Score</string>
    <string name="time">Time</string>
    <string name="found_words">Found Words</string>
    <string name="missed_words">Missed Words</string>
    <string name="total_words">Total Words:</string>
    <string name="total_score">Total Score:</string>
    <string name="value_max_percentage">%1$d/%2$d (%3$d%%)</string>
    <string name="high_score">High Score</string>
...
        <item quantity="other">/ %d points</item>
    </plurals>
    <plurals name="num_minutes">
        <item quantity="one">%d min</item>
        <item quantity="other">%d mins</item>
    </plurals>
    <string name="game_mode">Game Mode</string>
    <string name="help">Help</string>
    <string name="game_description">Lexica is a word game that is available on the Android platform. Players are given 3 to 30 minutes to find as many words as possible on a grid of random letters.</string>
    <string name="about_lexica">About Lexica</string>
    <string name="lexica_what_is_it">Lexica is a word game that is available on the Android platform. Players are given time to find as many words as possible on a grid of random letters.</string>
    <string name="help_how_to_play">How to play</string>
    <string name="help_how_to_play_desc">To play Lexica, start a new game by tapping \"New Game\" from the main menu. On the game screen, connect adjacent letters in the grid to form words, with connections possible horizontally, vertically, or diagonally. Each word must be at least three letters long and is automatically submitted upon formation, with points awarded based on the word\'s length an
    <string name="back">Back</string>
    <string name="new_game_mode">New Game Mode</string>
    <string name="min_word_length">Min Word Length</string>
</resources>

