...
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:padding="24dp"
        android:hint="@string/input_game_mode_name_hint"
        app:helperText="@string/input_game_mode_name_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <mehdi.sakout.fancybuttons.FancyButton
...
            android:layout_height="wrap_content"
            android:text="5x5"
            android:textColor="?attr/list__selectable_item_text_colour"
            app:buttonTint="?attr/list__selectable_item_text_colour"
            tools:ignore="HardcodedText" />
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/board_size_6x6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="6x6"
            android:textColor="?attr/list__selectable_item_text_colour"
            app:buttonTint="?attr/list__selectable_item_text_colour"
            tools:ignore="HardcodedText" />
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/list__selectable_item_text_colour"
            app:buttonTint="?attr/list__selectable_item_text_colour"
            android:text="@string/word_length" />
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/score_type_letter_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/list__selectable_item_text_colour"
            app:buttonTint="?attr/list__selectable_item_text_colour"
            android:text="@string/letter_points" />
    </RadioGroup>
...
            android:layout_height="wrap_content"
            android:text="3"
            android:textColor="?attr/list__selectable_item_text_colour"
            app:buttonTint="?attr/list__selectable_item_text_colour"
            tools:ignore="HardcodedText" />
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/min_word_length_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4"
            android:textColor="?attr/list__selectable_item_text_colour"
            app:buttonTint="?attr/list__selectable_item_text_colour"
            tools:ignore="HardcodedText" />
...
            android:layout_height="wrap_content"
            android:textColor="?attr/list__selectable_item_text_colour"
            app:buttonTint="?attr/list__selectable_item_text_colour"
            android:text="@string/hint_colour" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/hint_tile_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/list__selectable_item_text_colour"
            app:buttonTint="?attr/list__selectable_item_text_colour"
            android:text="@string/tile_count" />

...
