...
	xmlns:tools="http://schemas.android.com/tools"
	android:background="?attr/score__background_colour"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:fancy="http://schemas.android.com/apk/res-auto">

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/recycler_view"
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintBottom_toTopOf="@+id/button_wrapper"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
...
			fancy:fb_iconPosition="top"
			fancy:fb_text="@string/found_words"
			fancy:fb_textColor="?attr/home__secondary_button_text_colour"
			fancy:fb_textSize="18sp" />

		<mehdi.sakout.fancybuttons.FancyButton
			android:id="@+id/missed_words_button"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:paddingTop="?attr/home__button_padding"
			android:paddingBottom="?attr/home__button_padding"
			app:layout_constraintWidth_percent="0.34"
...
			fancy:fb_iconPosition="top"
			fancy:fb_text="@string/missed_words"
			fancy:fb_textColor="?attr/home__secondary_button_text_colour"
			fancy:fb_textSize="18sp" />

		<mehdi.sakout.fancybuttons.FancyButton
			android:id="@+id/back_button"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:paddingTop="?attr/home__button_padding"
			android:paddingBottom="?attr/home__button_padding"
			app:layout_constraintWidth_percent="0.34"
...
